--- a/Qtalk/templates/home.html
+++ b/Qtalk/templates/home.html
@@ -5,10 +5,10 @@
   <article class="media content-section">
         <div class="media-body">
           <div class="article-metadata">
-            <a class="mr-4" href="#">{{ post.username }}</a>
-            <small class="text-muted ml-2">{{ post.date_posted }}</small>
+            <a class="mr-4 float-right" href="#">{{ post.username }}</a>
+            <small class="text-muted ml-2 ">{{ post.date_posted }}</small>
           </div>
-          <p class="article-content rtl float-right">{{ post.content }}</p>
+          <p class="article-content rtl ">{{ post.content }}</p>
         </div>
       </article>
   {% endfor %}
