--- a/Qtalk/templates/user_post.html
+++ b/Qtalk/templates/user_post.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
+<h1>{{ user.username }}</h1>
 <div style="direction:ltr;text-align: left">
   {% for page_num in posts.iter_pages(left_edge=2, right_edge=2, left_current=1, right_current=2) %}
         {% if page_num %}
           {% if posts.page == page_num %}
-            <a class="btn btn-info" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+            <a class="btn btn-info" href="{{ url_for('user_post', username=user.username, page=page_num) }}">{{ page_num }}</a>
           {% else %}
-            <a class="btn btn-outline-info" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+            <a class="btn btn-outline-info" href="{{ url_for('user_post', username=user.username, page=page_num) }}">{{ page_num }}</a>
           {% endif %}
         {% else %}
           ...
         {% endif %}
       {% endfor %}
-    </div>
-
+</div>
   {% for post in posts.items %}
       <div class="card" style="margin-top:30px;">
   <div class="card-body">
@@ -41,15 +41,17 @@
     {% for page_num in posts.iter_pages(left_edge=2, right_edge=2, left_current=1, right_current=2) %}
           {% if page_num %}
             {% if posts.page == page_num %}
-              <a class="btn btn-info" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+              <a class="btn btn-info" href="{{ url_for('user_post', username=user.username, page=page_num) }}">{{ page_num }}</a>
             {% else %}
-              <a class="btn btn-outline-info" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+              <a class="btn btn-outline-info" href="{{ url_for('user_post', username=user.username, page=page_num) }}">{{ page_num }}</a>
             {% endif %}
           {% else %}
             ...
           {% endif %}
         {% endfor %}
-      </div>
+  </div>
+
+
   {% for post in posts.items %}
 
 {% if post.author == current_user %}
