create modal for edit btn

--- a/Qtalk/templates/base.html
+++ b/Qtalk/templates/base.html
@@ -34,12 +34,12 @@
         </ul>
     </div>
     <div class="mx-auto order-0">
+      <button class="navbar-toggler" style="float: right;margin-left: 40px" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+          <span class="navbar-toggler-icon"></span>
+      </button>
         <a class="navbar-brand mx-auto" href="#">
           <img src="{{ url_for('static', filename='logo/logo.png') }}" width="200" height="30" alt="">
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-collapse2">
-            <span class="navbar-toggler-icon"></span>
-        </button>
     </div>
     <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
         <ul class="navbar-nav ml-auto">
