--- a/Qtalk/templates/home.html
+++ b/Qtalk/templates/home.html
@@ -26,13 +26,14 @@
       <h6 class="card-subtitle mb-2 text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</h6>
       {% if post.author == current_user %}
           <div>
-            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('update_post', post_id=post.id) }}">ویرایش</a>
+            <button type="button" onclick="myFunction()" class="btn btn-primary btn-sm m-1" data-toggle="modal" data-target="#editModal-{{ post.id }}">ویرایش</button>
             <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal-{{ post.id }}">حذف</button>
           </div>
         {% endif %}
-      <hr>
+      <br>
       <p class="card-text article-content ">{{ post.content }}</p>
-      <a href="#" class="card-link">Another link</a>
+      <hr style="margin-top:30px; ">
+      <small>{{post.author.status}}</small>
     </div>
   </div>
 
@@ -66,6 +67,43 @@
           <button type="button" class="btn btn-secondary" data-dismiss="modal">خروج</button>
           <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
             <input class="btn btn-danger" type="submit" value="حذف">
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="modal fade" id="editModal-{{ post.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">ویرایش ارسال</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form method="POST" action="{{ url_for('update_post',post_id=post.id) }}">
+            {{ form.hidden_tag() }}
+            <filfieldset class="form-group ">
+                <div class="form-group">
+                    {% if form.content.errors %}
+                    {{ form.content(class="form-control form-control-lg is-invalid", rows="12" ) }}
+                      <div class="invalid-feedback">
+                          {% for error in form.content.errors %}
+                            <span>{{ error }}</span>
+                          {% endfor %}
+                      </div>
+                    {% else %}
+                        {% set f = form.content.process_data(post.content) %}
+                        {{ form.content(class="form-control form-control-lg", rows="12") }}
+                    {% endif %}
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">انصراف</button>
+                    {{ form.submit(class="btn btn-outline-info") }}
+                </div>
           </form>
         </div>
       </div>
