--- a/Qtalk/templates/base.html
+++ b/Qtalk/templates/base.html
@@ -34,7 +34,7 @@
         </ul>
     </div>
     <div class="mx-auto order-0">
-      <button class="navbar-toggler" style="float: right;margin-left: 40px" type="button" data-toggle="collapse" data-target=".dual-collapse2">
+      <button class="navbar-toggler" style="position: relative;left:10px" type="button" data-toggle="collapse" data-target=".dual-collapse2">
           <span class="navbar-toggler-icon"></span>
       </button>
         <a class="navbar-brand mx-auto" href="#">
