--- a/Qtalk/templates/home.html
+++ b/Qtalk/templates/home.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+<button type="button" class="fixedbutton btn" data-toggle="modal" data-target="#sendModal"><img src="{{url_for('static', filename='logo/add_btn.png')}}" width="65" height="65"></button>
+
 <div style="direction:ltr;text-align: left">
   {% for page_num in posts.iter_pages(left_edge=2, right_edge=2, left_current=1, right_current=2) %}
         {% if page_num %}
@@ -30,7 +32,7 @@
             <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal-{{ post.id }}">حذف</button>
           </div>
         {% endif %}
-      <br>
+      <hr>
       <p class="card-text article-content ">{{ post.content }}</p>
       <hr style="margin-top:30px; ">
       <small>{{post.author.status}}</small>
@@ -112,5 +114,38 @@
 {% endif %}
 
   {% endfor %}
-
+  <div class="modal fade" id="sendModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">ارسال جدید</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form method="POST" action="{{ url_for('new_post') }}">
+              {{ form.hidden_tag() }}
+              <filfieldset class="form-group ">
+                  <div class="form-group">
+                      {% if form2.content.errors %}
+                      {{ form2.content(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form2.content.errors %}
+                              <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                      {% else %}
+                          {{ form2.content(class="form-control form-control-lg", rows="10") }}
+                      {% endif %}
+                  </div>
+                  <div class="modal-footer">
+                      <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">انصراف</button>
+                      {{ form2.submit(class="btn btn-outline-info") }}
+                  </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock content %}
