--- a/Qtalk/templates/base.html
+++ b/Qtalk/templates/base.html
@@ -19,14 +19,14 @@
   </head>
   <body>
     <header class="site-header">
-      <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-color: #46403d;">
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-steel">
     <div class="navbar-collapse collapse w-100 order-1 order-md-0 dual-collapse2">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item ">
                 <a class="nav-link" href="{{ url_for('home') }}">خانه</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('new_post') }}">ارسال پست</a>
+                <a class="nav-link" href="{{ url_for('explore') }}">کاوش</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ url_for('about') }}">درباره</a>
