--- a/Qtalk/templates/post.html
+++ b/Qtalk/templates/post.html
@@ -1,19 +1,84 @@
 {% extends "base.html" %}
 {% block content %}
 
-  <div class="card" style="margin-top:30px;">
+<div class="card" style="margin-top:30px;">
 <div class="card-body">
 <img class="rounded-circle article-img float-right" src="{{ url_for('static', filename='profile_pics/'+ post.author.image_file) }}">
 
-  <h5 class="card-title">
+<h5 class="card-title">
 
-    <a class="mr-4 float-right" href="#">{{ post.author.username }}</a>
-  </h5>
-  <h6 class="card-subtitle mb-2 text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</h6>
-  <hr>
-  <p class="card-text article-content ">{{ post.content }}</p>
-  <a href="#" class="card-link">Another link</a>
+  <a class="mr-4 float-right" href="{{url_for('user', username=post.author.username)}}">{{ post.author.username }}</a>
+</h5>
+<h6 class="card-subtitle mb-2 text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</h6>
+{% if post.author == current_user %}
+    <div>
+      <button type="button" onclick="myFunction()" class="btn btn-primary btn-sm m-1" data-toggle="modal" data-target="#editModal-{{ post.id }}">ویرایش</button>
+      <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal-{{ post.id }}">حذف</button>
+    </div>
+  {% endif %}
+<hr>
+<p class="card-text article-content ">{{ post.content }}</p>
+<hr style="margin-top:30px; ">
+<small>{{post.author.status}}</small>
 </div>
 </div>
+
+{% if post.author == current_user %}
+<div class="modal fade" id="deleteModal-{{ post.id }}" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">از پاک شدن پست اطمینان داری؟</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">خروج</button>
+        <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
+          <input class="btn btn-danger" type="submit" value="حذف">
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="modal fade" id="editModal-{{ post.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">ویرایش ارسال</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form method="POST" action="{{ url_for('update_post',post_id=post.id) }}">
+          {{ form.hidden_tag() }}
+          <filfieldset class="form-group ">
+              <div class="form-group">
+                  {% if form.content.errors %}
+                  {{ form.content(class="form-control form-control-lg is-invalid", rows="12" ) }}
+                    <div class="invalid-feedback">
+                        {% for error in form.content.errors %}
+                          <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                  {% else %}
+                      {% set f = form.content.process_data(post.content) %}
+                      {{ form.content(class="form-control form-control-lg", rows="12") }}
+                  {% endif %}
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">انصراف</button>
+                  {{ form.submit(class="btn btn-outline-info") }}
+              </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+{% endif %}
 
 {% endblock content %}
