--- a/Qtalk/templates/user_post.html
+++ b/Qtalk/templates/user_post.html
@@ -1,80 +1,173 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>{{ user.username }}</h1>
-<div style="direction:ltr;text-align: left">
-  {% for page_num in posts.iter_pages(left_edge=2, right_edge=2, left_current=1, right_current=2) %}
-        {% if page_num %}
-          {% if posts.page == page_num %}
-            <a class="btn btn-info" href="{{ url_for('user_post', username=user.username, page=page_num) }}">{{ page_num }}</a>
-          {% else %}
-            <a class="btn btn-outline-info" href="{{ url_for('user_post', username=user.username, page=page_num) }}">{{ page_num }}</a>
-          {% endif %}
-        {% else %}
-          ...
-        {% endif %}
-      {% endfor %}
-</div>
-  {% for post in posts.items %}
-      <div class="card" style="margin-top:30px;">
-  <div class="card-body">
-    <img class="rounded-circle article-img float-right" src="{{ url_for('static', filename='profile_pics/'+ post.author.image_file) }}">
 
-      <h5 class="card-title">
+<main role="main" class="container">
+  <div class="row">
+    <div class="col-md-4">
+      <div class="cardp">
+  <img src="{{ filename }}" style="width:100%">
+  <h1>{{user.username}}</h1>
+  <div class="row">
+    <div class="col " align="center">
+        <h5>
+          {{ user.followers.count() }} <br/> <span> فالوور</span>
+        </h5>
+    </div>
+    <div class="col" align="center">
+        <h5>
+          {{ user.followed.count() }} <br/> <span>فالوئینگ </span>
 
-        <a class="mr-4 float-right" href="{{url_for('user_post', username=post.author.username)}}">{{ post.author.username }}</a>
-      </h5>
-      <h6 class="card-subtitle mb-2 text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</h6>
-      {% if post.author == current_user %}
-          <div>
-            <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{{ url_for('update_post', post_id=post.id) }}">ویرایش</a>
-            <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal-{{ post.id }}">حذف</button>
-          </div>
-        {% endif %}
-      <hr>
-      <p class="card-text article-content ">{{ post.content }}</p>
-      <a href="#" class="card-link">Another link</a>
+        </h5>
     </div>
   </div>
 
-  {% endfor %}
-  <div style="direction:ltr;text-align: center;margin-top:20px;">
-    {% for page_num in posts.iter_pages(left_edge=2, right_edge=2, left_current=1, right_current=2) %}
-          {% if page_num %}
-            {% if posts.page == page_num %}
-              <a class="btn btn-info" href="{{ url_for('user_post', username=user.username, page=page_num) }}">{{ page_num }}</a>
-            {% else %}
-              <a class="btn btn-outline-info" href="{{ url_for('user_post', username=user.username, page=page_num) }}">{{ page_num }}</a>
-            {% endif %}
-          {% else %}
-            ...
-          {% endif %}
-        {% endfor %}
+  <small class="text-muted">آخرین بازدید در {{user.last_seen}}</small>
+  <div class="text">
+    <p>
+        {% if user.status %}
+          {{user.status}}
+        {% endif %}
+    </p>
   </div>
 
+  <a href="#"><i class="fa fa-dribbble"></i></a>
+  <a href="#"><i class="fa fa-twitter"></i></a>
+  <a href="#"><i class="fa fa-linkedin"></i></a>
+  <a href="#"><i class="fa fa-facebook"></i></a>
+  {% if user == current_user %}
+  <p><a href="{{ url_for('account') }}" class="btn btn-outline-info buttonp" role="button" aria-pressed="true">تنظیمات حساب کاربری</a></p>
+  {% elif not current_user.is_following(user) %}
+  <p>
+      <form action="{{ url_for('follow', username=user.username) }}" method="post">
+          {{ form.hidden_tag() }}
+          {{ form.submit(value='فالو', class="btn btn-outline-success buttonp") }}
+      </form>
+  </p>
+  {% else %}
+  <p>
+      <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
+          {{ form.hidden_tag() }}
+          {{ form.submit(value='آنفالو', class="btn btn-outline-danger buttonp") }}
+      </form>
+  </p>
+  {% endif %}
+</div>
+    </div>
+    <div class="col-md-8">
+<div>
+</div>
+<div style="direction:ltr;text-align: left">
+{% for page_num in posts.iter_pages(left_edge=2, right_edge=2, left_current=1, right_current=2) %}
+    {% if page_num %}
+      {% if posts.page == page_num %}
+        <a class="btn btn-info" href="{{ url_for('user', username=user.username, page=page_num) }}">{{ page_num }}</a>
+      {% else %}
+        <a class="btn btn-outline-info" href="{{ url_for('user', username=user.username, page=page_num) }}">{{ page_num }}</a>
+      {% endif %}
+    {% else %}
+      ...
+    {% endif %}
+  {% endfor %}
+</div>
+{% for post in posts.items %}
+  <div class="card" style="margin-top:30px;">
+<div class="card-body">
+<img class="rounded-circle article-img float-right" src="{{ url_for('static', filename='profile_pics/'+ post.author.image_file) }}">
 
-  {% for post in posts.items %}
+  <h5 class="card-title">
+
+    <a class="mr-4 float-right" href="{{url_for('user', username=post.author.username)}}">{{ post.author.username }}</a>
+  </h5>
+  <h6 class="card-subtitle mb-2 text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</h6>
+  {% if post.author == current_user %}
+      <div>
+        <button type="button" onclick="myFunction()" class="btn btn-primary btn-sm m-1" data-toggle="modal" data-target="#editModal-{{ post.id }}">ویرایش</button>
+        <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal-{{ post.id }}">حذف</button>
+      </div>
+    {% endif %}
+  <hr>
+  <p class="card-text article-content ">{{ post.content }}</p>
+</div>
+</div>
+
+{% endfor %}
+<div style="direction:ltr;text-align: center;margin-top:20px;">
+{% for page_num in posts.iter_pages(left_edge=2, right_edge=2, left_current=1, right_current=2) %}
+      {% if page_num %}
+        {% if posts.page == page_num %}
+          <a class="btn btn-info" href="{{ url_for('user', username=user.username, page=page_num) }}">{{ page_num }}</a>
+        {% else %}
+          <a class="btn btn-outline-info" href="{{ url_for('user', username=user.username, page=page_num) }}">{{ page_num }}</a>
+        {% endif %}
+      {% else %}
+        ...
+      {% endif %}
+    {% endfor %}
+</div>
+
+
+{% for post in posts.items %}
 
 {% if post.author == current_user %}
-  <div class="modal fade" id="deleteModal-{{ post.id }}" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="deleteModalLabel">از پاک شدن پست اطمینان داری؟</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">خروج</button>
-          <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
-            <input class="btn btn-danger" type="submit" value="حذف">
-          </form>
-        </div>
+<div class="modal fade" id="deleteModal-{{ post.id }}" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="deleteModalLabel">از پاک شدن پست اطمینان داری؟</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">خروج</button>
+        <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
+          <input class="btn btn-danger" type="submit" value="حذف">
+        </form>
       </div>
     </div>
   </div>
-{% endif %}
+</div>
 
-  {% endfor %}
+
+<div class="modal fade" id="editModal-{{ post.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">ویرایش ارسال</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form method="POST" action="{{ url_for('update_post',post_id=post.id) }}">
+          {{ form2.hidden_tag() }}
+          <filfieldset class="form-group ">
+              <div class="form-group">
+                  {% if form2.content.errors %}
+                  {{ form2.content(class="form-control form-control-lg is-invalid", rows="12" ) }}
+                    <div class="invalid-feedback">
+                        {% for error in form2.content.errors %}
+                          <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                  {% else %}
+                      {% set f = form2.content.process_data(post.content) %}
+                      {{ form2.content(class="form-control form-control-lg", rows="12") }}
+                  {% endif %}
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">انصراف</button>
+                  {{ form2.submit(class="btn btn-outline-info") }}
+              </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>{% endif %}
+
+{% endfor %}
+    </div>
+  </div>
+</main>
 
 {% endblock content %}
