--- a/Qtalk/templates/about.html
+++ b/Qtalk/templates/about.html
@@ -1,4 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
   <h1>درباره ما</h1>
+
+  <div class="alert alert-dark mt-4" role="alert">
+    فعلا چیزی ندارم که اینجا بنویسم :)))
+  </div>
 {% endblock content%}
