--- a/Qtalk/templates/account.html
+++ b/Qtalk/templates/account.html
@@ -68,4 +68,81 @@
           </div>
       </form>
   </div>
+
+  <div style="direction:ltr;text-align: left">
+    {% for page_num in posts.iter_pages(left_edge=2, right_edge=2, left_current=1, right_current=2) %}
+          {% if page_num %}
+            {% if posts.page == page_num %}
+              <a class="btn btn-info" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+            {% else %}
+              <a class="btn btn-outline-info" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+            {% endif %}
+          {% else %}
+            ...
+          {% endif %}
+        {% endfor %}
+      </div>
+
+    {% for post in posts.items %}
+        <div class="card" style="margin-top:30px;">
+    <div class="card-body">
+      <img class="rounded-circle article-img float-right" src="{{ url_for('static', filename='profile_pics/'+ post.author.image_file) }}">
+
+        <h5 class="card-title">
+
+          <a class="mr-4 float-right" href="{{url_for('user', username=post.author.username)}}">{{ post.author.username }}</a>
+        </h5>
+        <h6 class="card-subtitle mb-2 text-muted">{{ post.date_posted.strftime('%Y-%m-%d') }}</h6>
+        {% if post.author == current_user %}
+            <div>
+              <button type="button" class="btn btn-danger btn-sm m-1" data-toggle="modal" data-target="#deleteModal-{{ post.id }}">حذف</button>
+            </div>
+          {% endif %}
+        <hr>
+        <p class="card-text article-content ">{{ post.content }}</p>
+        {% if post.author.status %}
+        <hr style="margin-top:30px; ">
+        <small>{{post.author.status}}</small>
+        {% endif %}
+      </div>
+    </div>
+
+    {% endfor %}
+    <div style="direction:ltr;text-align: center;margin-top:20px;">
+      {% for page_num in posts.iter_pages(left_edge=2, right_edge=2, left_current=1, right_current=2) %}
+            {% if page_num %}
+              {% if posts.page == page_num %}
+                <a class="btn btn-info" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+              {% else %}
+                <a class="btn btn-outline-info" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+              {% endif %}
+            {% else %}
+              ...
+            {% endif %}
+          {% endfor %}
+        </div>
+    {% for post in posts.items %}
+
+  {% if post.author == current_user %}
+    <div class="modal fade" id="deleteModal-{{ post.id }}" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="deleteModalLabel">از پاک شدن پست اطمینان داری؟</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">خروج</button>
+            <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST">
+              <input class="btn btn-danger" type="submit" value="حذف">
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    {% endif %}
+    {% endfor %}
 {% endblock content%}
