--- a/Qtalk/templates/base.html
+++ b/Qtalk/templates/base.html
@@ -16,6 +16,10 @@
     {% else %}
       <title>Qtalk!</title>
     {% endif %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='js/script.js') }}">
+
+    </script>
   </head>
   <body>
     <header class="site-header">
@@ -83,7 +87,7 @@
         </div>
       </div>
     </main>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
   </body>
