--- a/Qtalk/templates/first_page.html
+++ b/Qtalk/templates/first_page.html
@@ -9,12 +9,16 @@
             <p>برای دسترسی به پروفایل خود، وارد شوید.</p>
          </div>
       </div>
+
       <div class="main">
+        <div class="alert alert-primary mt-4" role="alert">
+          این برنامه شدیدا در حال توسعه است ....
+        </div>
          <div class="col-md-9 col-sm-12">
            <div class="content-section">
              <legend class="border-bottom mb-4">وارد شوید</legend>
 
-               <form method="POST" action="">
+               <form method="POST" action="/login">
                    {{ form.hidden_tag() }}
                    <filfieldset class="form-group ">
                        <div class="form-group">
