--- a/Qtalk/templates/about.html
+++ b/Qtalk/templates/about.html
@@ -1,8 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
-  <h1>درباره ما</h1>
 
-  <div class="alert alert-dark mt-4" role="alert">
-    فعلا چیزی ندارم که اینجا بنویسم :)))
+  <div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4">Qtalk</h1>
+      <p class="lead  mt-4">
+        Qtalk!  یک پروژه شخصی و متن باز است که شدیدا در حال توسعه است.
+      </p>
+      <p class="lead">
+        خیلی خوشحال میشم اگه نظرات و پیشنهاداتتون رو باهام درمیون بزارید.
+      </p>
+      <p class=" float-left">
+          kave.moradian+Qtalk@gmail.com
+      </p>
+    </div>
   </div>
 {% endblock content%}
