--- a/app/Qtalk/templates/user_post.html
+++ b/app/Qtalk/templates/user_post.html
@@ -36,13 +36,15 @@
   <a href="#"><i class="fa fa-facebook"></i></a>
   {% if user == current_user %}
   <p><a href="{{ url_for('account') }}" class="btn btn-outline-info buttonp" role="button" aria-pressed="true">تنظیمات حساب کاربری</a></p>
-  {% elif not current_user.is_following(user) %}
+  {% elif current_user.is_authenticated %}
+      {% if not current_user.is_following(user) %}
   <p>
       <form action="{{ url_for('follow', username=user.username) }}" method="post">
           {{ form.hidden_tag() }}
           {{ form.submit(value='فالو', class="btn btn-outline-success buttonp") }}
       </form>
   </p>
+      {% endif %}
   {% else %}
   <p>
       <form action="{{ url_for('unfollow', username=user.username) }}" method="post">
