--- a/app/Qtalk/templates/explore.html
+++ b/app/Qtalk/templates/explore.html
@@ -7,9 +7,9 @@
   {% for page_num in posts.iter_pages(left_edge=2, right_edge=2, left_current=1, right_current=2) %}
         {% if page_num %}
           {% if posts.page == page_num %}
-            <a class="btn btn-info" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+            <a class="btn btn-info" href="{{ url_for('explore', page=page_num) }}">{{ page_num }}</a>
           {% else %}
-            <a class="btn btn-outline-info" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+            <a class="btn btn-outline-info" href="{{ url_for('explore', page=page_num) }}">{{ page_num }}</a>
           {% endif %}
         {% else %}
           ...
@@ -73,9 +73,9 @@
     {% for page_num in posts.iter_pages(left_edge=2, right_edge=2, left_current=1, right_current=2) %}
           {% if page_num %}
             {% if posts.page == page_num %}
-              <a class="btn btn-info" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+              <a class="btn btn-info" href="{{ url_for('explore', page=page_num) }}">{{ page_num }}</a>
             {% else %}
-              <a class="btn btn-outline-info" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
+              <a class="btn btn-outline-info" href="{{ url_for('explore', page=page_num) }}">{{ page_num }}</a>
             {% endif %}
           {% else %}
             ...
